--- a/sitedir/bio.html
+++ b/sitedir/bio.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>
 		Bio :: Aleph's Website
 	</title>
 	<meta name="title" content="Bio :: Aleph's Website" />
+	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
 
+	<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
 		content="Details and tidbits about Aleph Diallo, who runs this website. Learn about the things he wants to share with you." />
 	<meta property="og:description"
 		content="Details and tidbits about Aleph Diallo, who runs this website. Learn about the things he wants to share with you." />
 	<meta property="og:type" content="article" />
+	<!-- InstanceEndEditable -->
 
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+	<!-- InstanceBeginEditable name="canonical" -->
 	<link rel="canonical" href="https://badbunsen.com/bio.html" />
+	<!-- InstanceEndEditable -->
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -33,7 +40,7 @@
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
 	</div>
 
-	<div class="main">
+	<div class="main"><!-- InstanceBeginEditable name="content" -->
 		<article class="h-entry">
 			<header>
 				<h1 class="p-name">about aleph diallo.</h1>
@@ -98,7 +105,7 @@
 			</section>
 			</div>
 		</article>
-	</div>
+	<!-- InstanceEndEditable --></div>
 
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
