--- a/sitedir/bio.html
+++ b/sitedir/bio.html
@@ -38,7 +38,7 @@
 		<img src="/stuff/grafx/sitegrafx/logos/awebsite/blah_white.gif"
 		alt="Blah Guy" height="32" />
 		<img src="/stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.gif" height="32" /><br />
-		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="http://badbunsen.com/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main"><!-- InstanceBeginEditable name="content" -->
